--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@commitlint/config-angular": "15.0.0",
     "@elastic/elasticsearch": "7.15.0",
     "@nestjs/common": "8.2.3",
+    "@opensearch-project/opensearch": "^1.0.0",
     "@types/node": "16.11.12",
     "@typescript-eslint/eslint-plugin": "5.6.0",
     "@typescript-eslint/parser": "5.6.0",
