--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rxjs": "7.4.0",
     "typescript": "4.5.3"
   },
+  "files": ["dist"],
   "lint-staged": {
     "*.ts": [
       "prettier --write"
