--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "prerelease": "npm run build",
     "release": "release-it"
   },
+  "dependencies": {
+    "@opensearch-project/opensearch": "^1.0.0"
+  },
   "peerDependencies": {
-    "@opensearch-project/opensearch": "^1.0.0",
     "@nestjs/common": "^6.0.0 || ^7.0.0 || ^8.0.0",
     "rxjs": "^6.2.1 || ^7.2.0"
   },
