--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@nestjs/elasticsearch",
+  "name": "jporter-dev/nestjs-opensearch",
   "version": "1.0.0",
-  "description": "Nest - modern, fast, powerful node.js web framework (@elasticsearch)",
-  "author": "Kamil Mysliwiec",
+  "description": "Nest - modern, fast, powerful node.js web framework (@opensearch-project/opensearch)",
+  "author": "Josh Porter",
   "license": "MIT",
   "main": "dist/index.js",
   "scripts": {
@@ -18,14 +18,14 @@
   },
   "peerDependencies": {
     "@nestjs/common": "^6.0.0 || ^7.0.0 || ^8.0.0",
-    "@opensearch-project/opensearch": "^1.0.0",
+    "@opensearch-project/opensearch": "^1.1.0",
     "rxjs": "^6.2.1 || ^7.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "17.0.0",
     "@commitlint/config-angular": "17.0.0",
-    "@elastic/elasticsearch": "8.2.0",
     "@nestjs/common": "8.4.5",
+    "@opensearch-project/opensearch": "^1.1.0",
     "@types/node": "16.11.36",
     "@typescript-eslint/eslint-plugin": "5.25.0",
     "@typescript-eslint/parser": "5.25.0",
@@ -47,5 +47,6 @@
     "*.ts": [
       "prettier --write"
     ]
-  }
+  },
+  "dependencies": {}
 }
