--- a/package.json
+++ b/package.json
@@ -51,5 +51,9 @@
       "prettier --write"
     ]
   },
-  "dependencies": {}
+  "dependencies": {},
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  }
 }
