feat: rename all instances of elasticsearch to opensearch

--- a/.github/ISSUE_TEMPLATE/Bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/Bug_report.yml
@@ -6,7 +6,7 @@ body:
     attributes:
       value: |
         ## :warning: We use GitHub Issues to track bug reports, feature requests and regressions
- 
+
         If you are not sure that your issue is a bug, you could:
 
         - use our [Discord community](https://discord.gg/NestJS)
@@ -69,7 +69,7 @@ body:
     attributes:
       label: "Package version"
       description: |
-        Which version of `@nestjs/elasticsearch` are you using?
+        Which version of `@jporter-dev/opensearch` are you using?
         **Tip**: Make sure that all of yours `@nestjs/*` dependencies are in sync!
       placeholder: "8.1.3"
 
