--- a/.github/ISSUE_TEMPLATE/Regression.yml
+++ b/.github/ISSUE_TEMPLATE/Regression.yml
@@ -6,7 +6,7 @@ body:
     attributes:
       value: |
         ## :warning: We use GitHub Issues to track bug reports, feature requests and regressions
- 
+
         If you are not sure that your issue is a bug, you could:
 
         - use our [Discord community](https://discord.gg/NestJS)
@@ -42,7 +42,7 @@ body:
   - type: input
     attributes:
       label: "Versions"
-      description: "From which version of `@nestjs/elasticsearch` to which version you are upgrading"
+      description: "From which version of `@jporter-dev/opensearch` to which version you are upgrading"
       placeholder: "8.1.0 -> 8.1.3"
 
   - type: textarea
