--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "format": "prettier \"lib/**/*.ts\" --write",
     "build": "rimraf -rf dist && tsc -p tsconfig.json",
     "precommit": "lint-staged",
-    "prepare": "npm run build",
-    "prepublish": "npm run build",
-    "publish": "npm publish --access public",
+    "prepublish:npm": "npm run build",
+    "publish:npm": "npm publish --access public",
     "prerelease": "npm run build",
     "release": "release-it"
   },
