--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "rimraf -rf dist && tsc -p tsconfig.json",
     "precommit": "lint-staged",
     "prepublish": "npm run build",
-    "publish": "npm publish --access public",
+    "publish:npm": "npm publish --access public",
     "prerelease": "npm run build",
     "release": "release-it"
   },
