--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,9 +9,29 @@ on:
   workflow_dispatch:
 
 jobs:
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 'lts/*'
+      - name: Install dependencies
+        run: npm ci
+      - name: Build
+        run: npm run build
+
   release:
     name: Release
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
+    needs:
+      - build
     steps:
       - name: Checkout
         uses: actions/checkout@v3
