--- a/package.json
+++ b/package.json
@@ -21,25 +21,25 @@
     "rxjs": "^6.2.1 || ^7.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-angular": "^17.4.2",
     "@nestjs/common": "9.2.1",
-    "@commitlint/cli": "17.3.0",
-    "@commitlint/config-angular": "17.3.0",
     "@semantic-release/changelog": "6.0.2",
     "@semantic-release/git": "10.0.1",
     "@semantic-release/npm": "9.0.2",
-    "eslint": "8.28.0",
     "@types/node": "18.11.18",
-    "@typescript-eslint/eslint-plugin": "5.46.1",
-    "@typescript-eslint/parser": "5.46.1",
-    "eslint-config-prettier": "8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "2.26.0",
-    "husky": "8.0.2",
-    "release-it": "15.5.0",
+    "husky": "^8.0.3",
     "lint-staged": "13.1.0",
-    "prettier": "2.8.1",
+    "prettier": "^2.8.3",
+    "release-it": "^15.6.0",
     "rimraf": "3.0.2",
-    "rxjs": "7.5.7",
-    "typescript": "4.9.3"
+    "rxjs": "^7.8.0",
+    "typescript": "^4.9.5"
   },
   "files": [
     "dist"
@@ -49,7 +49,6 @@
       "prettier --write"
     ]
   },
-  "dependencies": {},
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
